Split up tweak initialization/registration and get tweak IDs based on valid tweaks (no longer shows tweaks that can't be used due to platform compatibility)